# Orbit-notmine

./: .gitignore  HOWTO_RUN.md  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  run_local.sh
cli/: __init__.py  commands.py  display.py  tray.py
collector/: monitor.py  proc_reader.py  psi_reader.py
data/: demo.db
data/personas/: developer.csv  heavy_streamer.csv  light_user.csv  office_worker.csv
enforcer/: __init__.py  cgroup.py  network.py
evaluation/: __init__.py  benchmark.py
model/: base_model.py  correction_layer.py  features.py
model/artifacts/: base_model.joblib
policy/: engine.py
scripts/: powerlayer-tray.service  powerlayer.service  train_base_model.py
storage/: aggregator.py  db.py  schema.sql
tests/: test_cli.py  test_collector.py  test_enforcer.py  test_model.py  test_policy.py  test_storage.py
tools/: __init__.py  demo_enforcer.py  demo_live.py  demo_live_predictions.py  e2e_flow_test.py  powerlayer_daemon.py  seed_demo_db.py
