[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerlayer"
version = "1.0.0"
authors = [
    { name = "Hemanth", email = "hemanth@example.com" }
]
description = "PowerLayer — Adaptive Linux Battery Manager & ML Process Throttler"
readme = "HOWTO_RUN.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
dependencies = [
    "psutil>=5.9",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "joblib>=1.3"
]

[project.scripts]
powerlayer = "cli.__init__:main"
powerlayer-tray = "cli.tray:main"
powerlayer-daemon = "tools.powerlayer_daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "collector*", "enforcer*", "evaluation*", "model*", "policy*", "storage*", "tools*"]

[tool.setuptools.package-data]
storage = ["schema.sql"]
assets = ["icons/*.png"]
model = ["artifacts/*.joblib"]
"" = ["config.yaml"]
